--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "routes": [
-    {
-      "src": "/api/*",
-      "dest": "https:/alanbase-front-bt2of.ondigitalocean.app/api/:splat"
-    }
-  ]
+  "cleanUrls": false
 }
